[tool.poetry]
name = "experiment-feeder-python"
version = "0.1.0"
description = ""
authors = ["Maxim Wu <maxwu@maxswu.com>"]
license = "MIT License"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.9.1"
pydantic-settings = "^2.5.2"
loguru = "^0.7.2"
httpx = "^0.27.2"
apscheduler = "^3.10.4"
confluent-kafka = "^2.5.3"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = [
  "app",
  "domain",
  "infra",
]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
